--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,7 +9,7 @@
     <h3>Write new chat..</h3>
     <form action="/chats" method="POST">
         <input type="text" placeholder="who are you" name="form"><br><br>
-        <textarea name="msg" id="" cols="30" rows="10">Write youy message here</textarea><br><br>
+        <textarea name="msg" id="" cols="30" rows="10">Write your message here</textarea><br><br>
         <input type="text" placeholder="Add receiver" name="to"><br><br>
         <button>Create Chat</button>
     </form>
